# TinyTerm

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: CMakeLists.txt  engine.cpp  engine.h  engine.hpp  entity_store.cpp  entity_store.h  main.cpp  numerics.h  player_controller.cpp  player_controller.h  strings.h  test  tinyterm.cpp  tinyterm.h
src/engine/: engine.cpp  engine.hpp
src/res/: grass  grass.txt  player  player2.txt  shadow.txt  strings.hpp  title
